[package]
name = "git-igitt"
version = "0.1.18"
authors = ["Martin Lange <martin_lange_@gmx.net>"]
description = "Interactive Git terminal application to browse and visualize Git history graphs arranged for your branching model"
repository = "https://github.com/mlange-42/git-igitt.git"
keywords = ["git", "graph"]
license = "MIT"
readme = "README.md"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false

[features]
default = ["crossterm"]

[dependencies]
